--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -89,6 +89,9 @@
         <action
             android:id="@+id/action_storeFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_storeFragment_to_orderFragment"
+            app:destination="@id/orderFragment" />
     </fragment>
     <fragment
         android:id="@+id/leaderFragment"
@@ -126,5 +129,12 @@
         <argument
             android:name="type"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.example.tbc_final.presentation.store.OrderFragment"
+        android:label="OrderFragment" >
+        <argument android:name="item"
+            app:argType="com.example.tbc_final.domain.model.SneakerModel$Sneaker" />
     </fragment>
 </navigation>
