--- a/app/src/main/res/layout/store_item_layout.xml
+++ b/app/src/main/res/layout/store_item_layout.xml
@@ -20,9 +20,9 @@
         app:layout_constraintVertical_bias="0.285"
         app:srcCompat="@drawable/_18099_00_png" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="240dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
